[gd_scene load_steps=6 format=3 uid="uid://dp3wknuwyvllq"]

[ext_resource type="Script" path="res://Scenes/dungeon_crawler.gd" id="1_3w4ni"]
[ext_resource type="Script" path="res://FPSCounter.gd" id="3_op5ge"]
[ext_resource type="PackedScene" uid="uid://b3wulvpcwq70r" path="res://gym_connection_handler.tscn" id="4_axqyv"]
[ext_resource type="Script" path="res://step_counter.gd" id="4_qlqsp"]
[ext_resource type="Script" path="res://LevelCounter.gd" id="5_vajnx"]

[node name="DungeonCrawler" type="Node"]
script = ExtResource("1_3w4ni")

[node name="GymConnectionHandler" parent="." instance=ExtResource("4_axqyv")]

[node name="FPSCounter" type="Label" parent="."]
visible = false
modulate = Color(0.780392, 0.635294, 0.0627451, 1)
offset_right = 40.0
offset_bottom = 23.0
script = ExtResource("3_op5ge")

[node name="StepCounter" type="Label" parent="."]
modulate = Color(0.780392, 0.635294, 0.0627451, 1)
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -20.0
offset_right = 20.0
offset_bottom = 23.0
grow_horizontal = 2
script = ExtResource("4_qlqsp")

[node name="LevelCounter" type="Label" parent="."]
modulate = Color(0.780392, 0.635294, 0.0627451, 1)
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -40.0
offset_bottom = 23.0
grow_horizontal = 0
script = ExtResource("5_vajnx")
